[tool.poetry]
name = "leveldb-pyz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "LevelDB_Viewer.py"}]

[tool.poetry.dependencies]
python = "^3.10"
leveldb = "^0.201"
pyqt5 = "^5.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
